--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="card-columns">
+<div *ngFor="let song of newSongs" class="card" style="width: 18rem;">
+    <img [src]="song.images[0].url" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">{{song.name}}</h5>
+      <p class="card-text">
+        <span *ngFor="let singers of song.artists" class="badge badge-info">{{singers.name}}</span>
+      </p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
