--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,14 +4,16 @@
   </div>
 </div>
 
-<div class="card-columns m-5">
+<!-- <div class="card-columns m-5">
   <div *ngFor="let artist of artists" class="card" style="width: 18rem;">
-    <img [src]="artist.images[0].url" class="card-img-top" alt="...">
+    <img [src]="artist.images | noimage" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">{{artist.name}}</h5>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
-</div>
+</div> -->
+
+<app-tarjetas [items]="artists"></app-tarjetas>
 
 
