--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,16 +4,8 @@
   </div>
 </div>
 
-<!-- <div class="card-columns m-5">
-  <div *ngFor="let artist of artists" class="card" style="width: 18rem;">
-    <img [src]="artist.images | noimage" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">{{artist.name}}</h5>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-</div> -->
+<app-loading *ngIf="loading" class="m-5"></app-loading>
 
-<app-tarjetas [items]="artists"></app-tarjetas>
+<app-tarjetas *ngIf="!loading" [items]="artists" ></app-tarjetas>
 
 
