--- a/src/app/components/tarjetas/tarjetas.component.html
+++ b/src/app/components/tarjetas/tarjetas.component.html
@@ -1,5 +1,5 @@
-<div class="card-columns">
-  <div *ngFor="let item of items" class="card" style="width: 18rem;">
+<div class="card-columns mt-5 animated fadeIn">
+  <div (click)="showArtist(item)" *ngFor="let item of items" class="card puntero" >
       <img [src]="item.images | noimage" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">{{item.name}}</h5>
