--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -1,2 +1,46 @@
-<p>artist works!</p>
-<p>{{artist.name}}</p>
+<app-loading *ngIf="loading"></app-loading>
+
+<div class="row animated fadeIn" *ngIf="!loading">
+  <div class="col-2">
+    <img [src]="artist.images | noimage " class="img-thumbnail img-circle">
+  </div>
+  <div class="col">
+    <h3>{{artist.name}}</h3>
+    <p>
+      <a [href]="artist.external_urls.spotify" target="_blank">
+        Ir a la página del artista
+      </a>
+    </p>
+  </div>
+  <div class="col-4 text-right">
+    <button routerLink="/home" class="btn btn-outline-primary">Regresar</button>
+  </div>
+</div>
+
+<div class="row m-5">
+  <div class="col">
+    <table class="table" style="color:white">
+      <thead class="bg-info">
+        <tr>
+          <th>Foto</th>
+          <th>Album</th>
+          <th>Canción</th>
+          <th>Vista previa</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let tracks of topTracks">
+          <td>
+            <img [src]="tracks.album.images | noimage" alt="" class="img-thumb">
+          </td>
+          <td>{{tracks.album.name}}</td>
+          <td>{{tracks.name}}</td>
+          <td>
+            <!-- <audio [src]="tracks.preview_url" controls></audio> -->
+            <iframe [src]="tracks.album.id | domseguro" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </td>          
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
